# rmw_email

./: README.md  codecov.yml  dependencies.repos  gen_docs.yml
.github/workflows/: ci.yml  dco.yml  doc.yml  my.repos  tag.yml
api/: genindex.html  index.html  objects.inv  search.html
api/.doctrees/: index.doctree
api/email/: .buildinfo  annotated.html  classemail_1_1CommunicationInfo-members.html  classemail_1_1CommunicationInfo.html  classemail_1_1Context-members.html  classemail_1_1Context.html  classemail_1_1ContextAlreadyInitializedError-members.html  classemail_1_1ContextAlreadyInitializedError.html  classemail_1_1ContextAlreadyInitializedError__coll__graph.dot  classemail_1_1ContextAlreadyInitializedError__coll__graph.map  classemail_1_1ContextAlreadyInitializedError__coll__graph.md5  classemail_1_1ContextAlreadyInitializedError__inherit__graph.map  classemail_1_1ContextAlreadyInitializedError__inherit__graph.md5  classemail_1_1ContextError-members.html  classemail_1_1ContextError.html  classemail_1_1ContextError__coll__graph.dot  classemail_1_1ContextError__coll__graph.map  classemail_1_1ContextError__coll__graph.md5  classemail_1_1ContextError__inherit__graph.dot  classemail_1_1ContextError__inherit__graph.map  classemail_1_1ContextError__inherit__graph.md5  classemail_1_1ContextInitFailedError-members.html  classemail_1_1ContextInitFailedError.html  classemail_1_1ContextInitFailedError__coll__graph.dot  classemail_1_1ContextInitFailedError__coll__graph.map  classemail_1_1ContextInitFailedError__coll__graph.md5  classemail_1_1ContextInitFailedError__inherit__graph.map  classemail_1_1ContextInitFailedError__inherit__graph.md5  classemail_1_1ContextNotInitializedError-members.html  classemail_1_1ContextNotInitializedError.html  classemail_1_1ContextNotInitializedError__coll__graph.map  classemail_1_1ContextNotInitializedError__coll__graph.md5  classemail_1_1ContextNotInitializedError__inherit__graph.dot  classemail_1_1ContextNotInitializedError__inherit__graph.map  (+639 more)
email/: CMakeLists.txt  Doxyfile  QUALITY_DECLARATION.md  email.yml  package.xml
email/cmake/: add_example.cmake
email/doc/: design.md
email/example/: pub.cpp  send.cpp  service_client.cpp  service_server.cpp
email/include/email/: communication_info.hpp  config.hpp.in  context.hpp  curl_context.hpp  curl_executor.hpp  email.hpp  email_receiver.hpp  email_sender.hpp  gid.hpp  gid_object.hpp  guard_condition.hpp  init.hpp  log.hpp  lttng.hpp  macros.hpp  message_info.hpp  named_object.hpp  options.hpp  payload_utils.hpp  pub_sub.hpp  publisher.hpp  safe_map.hpp  safe_queue.hpp  service.hpp  service_client.hpp  service_handler.hpp  service_info.hpp  service_request.hpp  service_server.hpp  subscriber.hpp  subscriber_manager.hpp  subscription.hpp  subscription_handler.hpp  timestamp.hpp  types.hpp  utils.hpp  visibility_control.hpp  wait.hpp  wait_set.hpp
email/include/email/curl/: context.hpp  executor.hpp  info.hpp
email/include/email/email/: curl_receiver.hpp  curl_sender.hpp  handler.hpp  info.hpp  intra_receiver.hpp  intra_sender.hpp  payload_utils.hpp  polling_manager.hpp  receiver.hpp  response_utils.hpp  sender.hpp
email/src/: communication_info.cpp  context.cpp  curl_context.cpp  curl_executor.cpp  email.cpp  email_receiver.cpp  email_sender.cpp  gid.cpp  gid_object.cpp  guard_condition.cpp  init.cpp  log.cpp  lttng.cpp  message_info.cpp  named_object.cpp  options.cpp  payload_utils.cpp  pub.cpp  pub_sub.cpp  publisher.cpp  receive.cpp  response_utils.cpp  send.cpp  service.cpp  service_client.cpp  service_handler.cpp  service_info.cpp  service_server.cpp  sub.cpp  subscriber.cpp  subscriber_manager.cpp  subscription.cpp  subscription_handler.cpp  timestamp.cpp  utils.cpp  wait.cpp  wait_set.cpp
email/src/curl/: context.cpp  executor.cpp
email/src/email/: curl_receiver.cpp  curl_sender.cpp  handler.cpp  intra_receiver.cpp  intra_sender.cpp  payload_utils.cpp  polling_manager.cpp  receiver.cpp  response_utils.cpp  sender.cpp
email/src/example/: pub.cpp  receive.cpp  send.cpp  sub.cpp
email/test/: test_cli.cpp  test_communication_info.cpp  test_containers.cpp  test_context.cpp  test_end_to_end.cpp  test_gid.cpp  test_handlers.cpp  test_log.cpp  test_message_info.cpp  test_options.cpp  test_pub_sub.cpp  test_service.cpp  test_timestamp.cpp  test_utils.cpp  test_utils_payload.cpp  test_utils_response.cpp  test_wait_set.cpp
email_examples/: CMakeLists.txt  QUALITY_DECLARATION.md  package.xml
email_examples/cmake/: add_example.cmake
email_examples/src/: intra_pub_sub_wait_message_info.cpp  intra_service_client_server_wait_service_info.cpp  pub.cpp  receive.cpp  send.cpp  service_client.cpp  service_client_two.cpp  service_client_wait.cpp  service_client_wait_service_info.cpp  service_server.cpp  service_server_wait.cpp  service_server_wait_service_info.cpp  sub.cpp  sub_wait.cpp  sub_wait_message_info.cpp  sub_wait_set.cpp
rmw_email_cpp/: CMakeLists.txt  QUALITY_DECLARATION.md  package.xml
rmw_email_cpp/img/: overview_diagram.drawio  overview_diagram_simple.drawio
rmw_email_cpp/include/rmw_email_cpp/: config.hpp.in  conversion.hpp  gid.hpp  guard_condition.hpp  identifier.hpp  log.hpp  lttng.hpp  macros.hpp  qos.hpp  take.hpp  timestamp.hpp  topic_service_name.hpp  type_support.hpp  types.hpp
rmw_email_cpp/perf/: perf_plot.py  perf_test.sh
rmw_email_cpp/src/: conversion.cpp  gid.cpp  guard_condition.cpp  identifier.cpp  lttng.cpp  qos.cpp  rmw_client.cpp  rmw_event.cpp  rmw_get_service_names_and_types.cpp  rmw_get_topic_endpoint_info.cpp  rmw_get_topic_names_and_types.cpp  rmw_gid.cpp  rmw_guard_condition.cpp  rmw_implementation_serialization.cpp  rmw_init.cpp  rmw_log.cpp  rmw_network_flow.cpp  rmw_node.cpp  rmw_node_info_and_types.cpp  rmw_node_names.cpp  rmw_publish.cpp  rmw_publisher.cpp  rmw_qos_profiles.cpp  rmw_request.cpp  rmw_response.cpp  rmw_serialize.cpp  rmw_service.cpp  rmw_subscription.cpp  rmw_take.cpp  rmw_wait.cpp  take.cpp  timestamp.cpp  topic_service_name.cpp  type_support.cpp
rmw_email_cpp/test/: test_conversion.cpp  test_gid.cpp
(+142 files in other folders)
